# unscrolled

./: .gitignore  Cargo.toml  README.md  dev_help.sh  index.html
backend/: Cargo.toml  README.md  curl_anthropic.sh  run.sh
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml  index.html  run.sh  styles.scss  trunk.toml
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: api.rs  lib.rs
src/: main.rs
