# backend/Cargo.toml
[package]
name = "unscrolled-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = "0.7.2"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
thiserror = "1.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }