[package]
name = "unscrolled-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
web-sys = { version = "0.3.77", features = [
    "HtmlInputElement",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "Window",
    "Node",
] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
shared = { path = "../shared" }